# web-python-labs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app-start.sh  app.py  db.py  docker-compose.yaml  docker-compose.yml  form.py  manage.py  prometheus.yml  pyproject.toml  runner.py  urls.py
app/: main.py
app/api/: dependencies.py
app/api/routers/: auth.py  author.py  book.py  genre.py  main_router.py
app/core/: __init__.py
app/core/config/: auth.py  config.py  mongo.py
app/core/exc/: __init__.py  handlers.py
app/core/exc/auth/: __init__.py  exceptions.py
app/core/exc/base/: exceptions.py
app/enums/: __init__.py  exceptions.py  role.py
app/infra/database/: db.py  mongodb.py
app/infra/database/alembic/versions/: 00001_base_tables.py
app/managers/: convert.py  hash.py  permission.py
app/models/: __init__.py  author.py  base.py  book.py  genre.py  user.py
app/mongo_repositories/: __init__.py  author.py  base.py  book.py  genre.py  repositories.py  user.py
app/repositories/: author.py  base.py  book.py  genre.py  user.py
app/schemas/: __init__.py  auth.py  author.py  book.py  genre.py  user.py
app/services/: auth.py  author.py  book.py  genre.py
app/uow/: mongo.py  sql.py
core/: asgi.py  wsgi.py
core/api/: urls.py
core/api/managers/: user.py
core/api/migrations/: 0001_initial.py
core/api/models/: __init__.py  author.py  base.py  book.py  genre.py  user.py
core/api/repositories/: author.py  base.py  book.py  genre.py  user.py
core/api/serializers/: author.py  book.py  genre.py  register.py
core/api/utils/: pagination.py
core/api/views/: base.py
core/api/views/auth/: register.py
core/api/views/author/: __init__.py  author.py
core/api/views/book/: __init__.py  book.py
core/api/views/genre/: __init__.py  genre.py
core/enums/: role.py
core/permissions/: __init__.py  admin.py
core/settings/: __init__.py  apps.py  base.py  db.py  drf.py
core/urls/: __init__.py
fluentd/: Dockerfile
library_django/: asgi.py  settings.py  urls.py  wsgi.py
repository/: __init__.py  author.py  base.py  book.py  genre.py
templates/: entity.html  entityCreation.html  entityTable.html  index.html  login.html  register.html
