[project]
name = "web-python-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "futurezayka",email = "kurachvlad911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "django-prometheus (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
